--- a/modules/ranger/rifle.conf
+++ b/modules/ranger/rifle.conf
@@ -130,7 +130,7 @@ mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 #-------------------------------------------
 # Documents
 #-------------------------------------------
-ext pdf, has atril,    X, flag f = atril "$@"
+ext pdf, has zathura,    X, flag f = zathura "$@"
 ext djvu, has atril,  X, flag f = atril "$@"
 ext epub, has foliate,  X, flag f = foliate "$@"
 
@@ -182,6 +182,7 @@ mime ^font, has fontforge, X, flag f = fontforge "$@"
 # if you install a rare terminal emulator, you probably use it.
 # gnome-terminal/konsole/xterm on the other hand are often installed as part of
 # a desktop environment or as fallback terminal emulators.
+mime ^ranger/x-terminal-emulator, has kitty = kitty -e "$@"
 mime ^ranger/x-terminal-emulator, has alacritty = alacritty -e "$@"
 mime ^ranger/x-terminal-emulator, has sakura = sakura -e "$@"
 mime ^ranger/x-terminal-emulator, has lilyterm = lilyterm -e "$@"
@@ -212,8 +213,8 @@ label wallpaper, number 14, mime ^image, has feh, X = feh --bg-fill "$1"
 #-------------------------------------------
 # Generic file openers
 #-------------------------------------------
-label open, has xdg-open = xdg-open -- "$@"
-label open, has open     = open -- "$@"
+label open, has xdg-open = xdg-open "$@"
+label open, has open     = open "$@"
 
 # Define the editor for non-text files + pager as last action
               !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = ask
