--- a/modules/ranger/rc.conf
+++ b/modules/ranger/rc.conf
@@ -139,12 +139,13 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
-set colorscheme jungle
+set colorscheme default
+set draw_borders true
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
 set preview_files true
-set preview_directories false
+set preview_directories true
 set collapse_preview true
 
 # Wrap long lines in plain text previews?
@@ -164,8 +165,6 @@ set draw_progress_bar_in_status_bar true
 # Separators are vertical lines between columns.
 # Outline draws a box around all the columns.
 # Both combines the two.
-set draw_borders none
-
 # Display the directory name in tabs?
 set dirname_in_tabs false
 
@@ -280,7 +279,7 @@ set clear_filters_on_dir_change false
 
 # Disable displaying line numbers in main column.
 # Possible values: false, absolute, relative.
-set line_numbers false
+set line_numbers true
 
 # When line_numbers=relative show the absolute line number in the
 # current line.
